# elephant_joke

./: .gitignore  CMakeLists.txt  README.md  VERSION  elephant_joke-3.10rc2-cp312-cp312-linux_x86_64.whl  pyproject.toml
.github/workflows/: wheels.yml
elephant_joke/: __init__.py  _version.py
python/: __init__.py
src/: elephant_joke.cpp
