[build-system]
requires = ["scikit-build-core>=0.12.2", "pybind11>=2.10", "cibuildwheel>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "elephant-joke"
dynamic = ["version"]
description = "A minimal C++ extension with an elephant joke"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<major>\\d+)\\.(?P<minor>\\d+)(?:_(?P<prerelease>[a-z]+)(?P<prenum>\\d+)|_(?P<dev>dev\\d+))$"
result = "{major}.{minor}.{prerelease}{prenum}"

[tool.scikit-build.cmake]
